--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A simple hangman application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --recursive"
   },
   "author": "sbeller",
   "license": "ISC",
@@ -12,5 +12,8 @@
     "express": "^4.16.2",
     "pug": "^2.0.0-rc.4",
     "uuid": "^3.2.1"
+  },
+  "devDependencies": {
+    "mocha": "^5.0.0"
   }
 }
